app/assets/stylesheets/pages/_fxone_remote.scss
.fxone-wrapper {
  overflow: hidden;
}

.fxone-first-section-background {
  background: linear-gradient(#EBEFF6, #F6F7FA);
}

.remote-image {
  position: relative;
  z-index: 5;
  width: 40%;
  margin: 5%;
  @include for-medium-devices-down {
    width: 70%;
    margin: 0px;
  }
  @include for-phone-only {
    width: 90%;
  }
}

.fxone-first-section-wrapper {
  padding-top: 100px;
  padding-bottom: 0;
  background: linear-gradient(#EBEFF6, #F6F7FA);
  @include for-phone-only {
    padding-top: 140px;
  }
}
.first-section-remote {
  @include for-medium-devices-down {
    flex-direction: column-reverse !important;
  }
}
.whitebg {
  background-color: white !important;
}
.fxone-second-section-wrapper {
  position: relative;
}

.fxone-third-section-wrapper {
  background-color: #FFF;
  position: relative;
}

.fxone-fourth-section-wrapper {
  padding-top: 40px;
  background-color: #FFF;
}

.fxone-fifth-section-wrapper {
  position: relative;
  background-color: #FFF;
  background-size: cover;
  background-position: center;
}

.fxone-sixth-section-wrapper {
  background: linear-gradient(#F5F6F9, #F8F9FB);
  padding-top: 100px;
  position: relative;
  @include for-phone-only {
    position: unset;
    background: #FFF;
    // background: #FFF;
  }
}

.fxone-seventh-section-wrapper {
  position: relative;
  background-color: #FFF;
  // padding-top: 100px;
}

.fxone-section {
  padding-top: 0;
  position: relative;
  z-index: 5;
}

.fxone-dots {
  position: absolute;
  width: 15vw;
  max-width: 300px;
  top: -5vw;
  left: 20%;
  @include for-medium-devices-down {
    left: 10%;
  }
}

.fxone-big-pill {
  position: absolute;
  width: 300px;
  top: 340px;
  right: -120px;
  z-index: 4;
  @include for-phone-only {
    width: 190px;
    top: 40px;
    right: -120px;
  }
  // @include for-large-devices-down {
  //   right: -395px;
  // }
}

.fxone-little-pill {
  position: absolute;
  width: 230px;
  top: 540px;
  left: -100px;
  z-index: 2;
  @include for-phone-only {
    width: 180px;
    top: 400px;
  }
  // @include for-large-devices-down {
  //   left: -430px;
  // }
}

.fxone-cards {
  margin: 0 auto;
  width: 100%;
  // @include for-xlarge-devices-up {
  //   width: 75%;
  // }
}

.fxone-card {
  background: #FFF;
  border-radius: 10px;
  border: 3px solid #fafafa;
  // padding: 0 16px 16px 0;
  position: relative;
  z-index: 4;
  margin: 15px 0;
  height: 210px;
  transition: 0.3s;
  box-shadow: 0px 8px 30px rgba(149, 156, 169, 0.30), -1px -1px 30px rgba(156, 173, 198, 0.30);
  &:hover {
    box-shadow: 0px 8px 5px rgba(149, 156, 169, 0.25), -1px -1px 10px rgba(156, 173, 198, 0.30);
  }
  padding-bottom: 16px;
  p {
    padding: 0 16px;
  }
  @include for-medium-devices-down {
    margin: 10px 0;
    height: 300px;
  }
}

.fxone-card-container {
  @include for-medium-devices-down {
    padding: 0 10px;
  }
}

.fxone-fourth-section-header {
  padding-top: 50px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.fxone-fourth-section-background {
  position: absolute;
  height: 100%;
  width: 100%;
  @include for-phone-only {
    // height: auto;
    top: -70px;
  }
}

.fxone-mobile-slant {
  position: absolute;
  width: 100%;
  top: -100px;
}

.fxone-fifth-section-content {
  position: relative;
  margin: 30px 0;
  background-color: #FFF;
  padding: 32px 10px;
  display: flex;
  justify-content: space-evenly;
  border-radius: 5px;
  box-shadow: 0 10px 20px rgba(0,0,0,0.2);
  width: 70%;
  @include for-large-devices-down {
    width: 80%;
  }
  @include for-medium-devices-down {
    width: 100%;
  }
  @include for-phone-only {
    flex-direction: column;
  }
}

.fxone-fifth-section-left, .fxone-fifth-section-right {
  padding: 16px;
  width: 50%;
  @include for-phone-only {
    width: 100%;
  }
}

.fxone-icon-sixth-section {
  position: relative;
  z-index: 5;
}

.fxone-sixth-section-header {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.fxone-sixth-section-check {
  display: flex;
  align-items: flex-start;
  img {
    margin-right: 10px;
    min-width: 20px;
  }
}

.fxone-sixth-section-content {
  align-items: flex-start;
  margin: auto;
  margin-top: 40px;
  width: 80%;
  @include for-large-devices-down {
    width: 90%;
  }
  @include for-medium-devices-down {
    width: 100%;
  }
  @include for-phone-only {
    flex-direction: column;
  }
}

.fxone-remote-sixth-section-title {
  position: relative;
  @include for-phone-only {
    margin: 25px 0;
  }
}

.fxone-dots-back {
  width: 200px;
  position: absolute;
  bottom: -40px;
  left: -165px;
  z-index: -1;
}

.fxone-seventh-section-dots {
  position: absolute;
  right: 30px;
  width: 160px;
  top: 240px;
  @include for-phone-only {
    display: none;
  }
}

.fxone-seventh-section-video-container {
  width: 100%;
  display: flex;
  justify-content: center;
  padding: 100px 0;
  @include for-phone-only {
    padding: 30px 0;
  }
}

.fxone-seventh-section-video {
  background-color: #111111;
  width: 80%;
  height: 500px;
  position: relative;
  z-index: 3;
}

.embed-player {
  width: 100%;
  height: 100%;
}

.responsive-header {
  font-size: 50px;
  @include for-small-devices-down {
    font-size: 35px;
  }
}

.responsive-text {
  font-size: 20px;
  font-weight: lighter;
  line-height: 30px;
  color: #717B8D;
  @include for-small-devices-down {
    font-size: 14px;
  }
}

.responsive-text-small {
  font-size: 16px;
  font-weight: lighter;
  line-height: 30px;
  color: #717B8D;
  @include for-small-devices-down {
    font-size: 14px;
  }
}

.fxone-no-padding {
  @include for-phone-only {
    h3, p {
      padding: 0 !important;
    }
  }
}

.fxone-first-section-text-right {
  padding: 20px;
  padding-right: 50px;
  @include for-phone-only {
    padding-left: 20px;
  }
}

.fxone-first-section-text-left {
  padding: 20px;
  padding-left: 50px;
  @include for-phone-only {
    padding-left: 20px;
  }
}

.fxone-first-section {
  justify-content: space-evenly;
  padding-bottom: 100px;
}

.fxone-remote-first-section-image {
  max-width: 800px;
  width: 60%;
  @include for-phone-only {
    width: 90%;
  }
}

.fxone-first-section-image {
  max-width: 1000px;
  width: 60%;
  @include for-phone-only {
    width: 90%;
  }
}

.fxone-logo {
  height: 50px;
  padding-bottom: 11px;
  padding-right: 5px;
  @include for-phone-only {
    height: 34px;
    padding-bottom: 7px;
  }
}

.fxone-logo-right {
  height: 50px;
  padding-bottom: 11px;
  padding-left: 5px;
  @include for-phone-only {
    height: 34px;
    padding-bottom: 7px;
  }
}

